# SplitUri

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GitVersion.yml  LICENSE  PROJECTNAME.sln  README.md  SplitUri.sln  azure-pipelines.yml
.github/workflows/: codeql-analysis.yml
docs/: index.md
include/siddiqsoft/: SplitUri.hpp
nuget/: SiddiqSoft.PROJECTNAME.nuspec  SiddiqSoft.SplitUri.nuspec
pack/: CMakeCommonHelpers.cmake  SiddiqSoft.SplitUri.nuspec
src/: CMakeLists.txt  SplitUri.hpp  projectname.hpp
tests/: CMakeLists.txt  basic_tests.vcxproj  examples.cpp  packages.config  test.cpp  test_splituri.cpp  test_splituri_narrow.cpp  test_splituri_wide.cpp  test_splituri_wide_nojson.cpp
